개인 하이퍼링크 연결&머스태치 수정

--- a/src/main/resources/templates/user/userApplyList.mustache
+++ b/src/main/resources/templates/user/userApplyList.mustache
@@ -38,13 +38,13 @@
 			<div class="m-2"></div>
 			<a href="userResumeForm" class="w-100 btn btn-info">이력서 등록</a>
 			<div class="m-2"></div>
-			<a href="#" class="w-100 btn btn-info">이력서 관리</a>
+			<a href="userResumeManage" class="w-100 btn btn-info">이력서 관리</a>
 			<div class="m-2"></div>
 			<a href="userApplyList" class="w-100 btn btn-info">지원내역</a>
 			<div class="m-2"></div>
 			<a href="userBookMarkForm" class="w-100 btn btn-info">북마크</a>
 			<div class="m-2"></div>
-			<a href="#" class="w-100 btn btn-info">기업추천</a>
+			<a href="userRecommendForm" class="w-100 btn btn-info">기업추천</a>
 			<div class="m-2"></div>
 		</div>
 
