--- a/src/main/resources/templates/user/userBookMarkForm.mustache
+++ b/src/main/resources/templates/user/userBookMarkForm.mustache
@@ -19,7 +19,7 @@
 			<div class="m-2"></div>
 			<a href="userBookMarkForm" class="w-100 btn btn-info">북마크</a>
 			<div class="m-2"></div>
-			<a href="#" class="w-100 btn btn-info">기업추천</a>
+			<a href="userRecommendForm" class="w-100 btn btn-info">기업추천</a>
 			<div class="m-2"></div>
 		</div>
 
