--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>Brand</title>
-	<meta charset="utf-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<link
-		href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-		rel="stylesheet"
-	/>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-	<link
-		href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css"
-		rel="stylesheet"
-	/>
+	<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet" />
 	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
 
 	<style></style>
@@ -24,7 +19,9 @@
 		<div class="d-flex justify-content-center align-items-center p-1">
 			<div class="col-4"></div>
 			<div class="col-4">
-				<a class="text-center flex-grow-1 text-decoration-none text-black" href="/"><h1>플랫폼명</h1></a>
+				<a class="text-center flex-grow-1 text-decoration-none text-black" href="/">
+					<h1>플랫폼명</h1>
+				</a>
 			</div>
 			<div class="col-4 d-flex justify-content-end">
 				<a class="btn btn-white fw-bold" href="/selectJoinForm">회원가입</a>
@@ -33,20 +30,10 @@
 		</div>
 
 		<nav class="navbar navbar-expand-sm navbar-dark bg-info mb-3 p-1">
-			<a href="/"
-			><img
-				src="../../../../../images/brand.png"
-				class="img-thumbnail "
-				alt="브랜드 로고"
-				width="90px"
-			/></a>
+			<a href="/"><img src="../../../../../images/brand.png" class="img-thumbnail " alt="브랜드 로고"
+					width="90px" /></a>
 			<div class="container-fluid">
-				<button
-					class="navbar-toggler"
-					type="button"
-					data-bs-toggle="collapse"
-					data-bs-target="#mynavbar"
-				>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="mynavbar">
@@ -55,24 +42,20 @@
 							<a class="nav-link text-white" href="#">채용정보</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-white" href="#">이력서등록</a>
+							<a class="nav-link text-white" href="userResumeForm">이력서등록</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-white" href="#">이력서관리</a>
+							<a class="nav-link text-white" href="userResumeManage">이력서관리</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-white" href="#">지원내역</a>
+							<a class="nav-link text-white" href="userApplyList">지원내역</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link text-white" href="#">고객센터</a>
 						</li>
 					</ul>
 					<form class="d-flex">
-						<input
-							class="form-control me-2"
-							type="text"
-							placeholder="Search"
-						/>
+						<input class="form-control me-2" type="text" placeholder="Search" />
 						<button class="badge bg-secondary" type="button">Search</button>
 					</form>
 				</div>
