--- a/src/main/resources/templates/user/userApplyForm.mustache
+++ b/src/main/resources/templates/user/userApplyForm.mustache
@@ -8,7 +8,8 @@
 		<h1 class="text-center">지원하기</h1>
 		<div class="d-flex m-2">
 			<div class="col-5">
-				<a href="#"><img src="../../../images/basic.jpg" class="img-fluid" style="width:300px; height:200px;"/></a>
+				<a href="#"><img src="../../../images/basic.jpg" class="img-fluid"
+						style="width:300px; height:200px;" /></a>
 			</div>
 
 			<div class="col-7 p-3">
@@ -34,24 +35,30 @@
 		<div class="p-3 m-3 d-flex flex-column align-items-center">
 			<div class="input-group mb-3">
 				<span class="input-group-text"><input class="form-check-input d-inline-block" type="checkbox"
-				                                      id=""></span>
-				<div class="form-control"><h3>이력서1</h3></div>
+						id=""></span>
+				<div class="form-control">
+					<h3>이력서1</h3>
+				</div>
 			</div>
 			<div class="input-group mb-3">
 				<span class="input-group-text"><input class="form-check-input d-inline-block" type="checkbox"
-				                                      id=""></span>
-				<div class="form-control"><h3>이력서2</h3></div>
+						id=""></span>
+				<div class="form-control">
+					<h3>이력서2</h3>
+				</div>
 			</div>
 			<div class="input-group mb-3">
 				<span class="input-group-text"><input class="form-check-input d-inline-block" type="checkbox"
-				                                      id=""></span>
-				<div class="form-control"><h3>이력서3</h3></div>
+						id=""></span>
+				<div class="form-control">
+					<h3>이력서3</h3>
+				</div>
 			</div>
 		</div>
 
 
 		<div class="ms-2 me-2 mb-2">
-			<a href="#" class="w-100 btn btn-info">지원하기</a>
+			<a href="userApply" class="w-100 btn btn-info">지원하기</a>
 		</div>
 
 	</div>
