--- a/src/main/resources/templates/user/userMyPage.mustache
+++ b/src/main/resources/templates/user/userMyPage.mustache
@@ -8,17 +8,17 @@
 	<div class="class col-8 h-auto d-flex border border-info">
 		<div class="bg-info col-2">
 			<div class="m-2"></div>
-			<a href="#" class="w-100 btn btn-info">마이 페이지</a>
+			<a href="userMyPage" class="w-100 btn btn-info">마이 페이지</a>
 			<div class="m-2"></div>
-			<a href="#" class="w-100 btn btn-info">이력서 등록</a>
+			<a href="userResumeForm" class="w-100 btn btn-info">이력서 등록</a>
 			<div class="m-2"></div>
-			<a href="#" class="w-100 btn btn-info">이력서 관리</a>
+			<a href="userResumeManage" class="w-100 btn btn-info">이력서 관리</a>
 			<div class="m-2"></div>
-			<a href="#" class="w-100 btn btn-info">지원내역</a>
+			<a href="userApplyList" class="w-100 btn btn-info">지원내역</a>
 			<div class="m-2"></div>
-			<a href="#" class="w-100 btn btn-info">북마크</a>
+			<a href="userBookMarkForm" class="w-100 btn btn-info">북마크</a>
 			<div class="m-2"></div>
-			<a href="#" class="w-100 btn btn-info">기업추천</a>
+			<a href="userRecommendForm" class="w-100 btn btn-info">기업추천</a>
 			<div class="m-2"></div>
 		</div>
 
@@ -29,7 +29,7 @@
 			<div class="d-flex">
 				<div class="m-2 col-4 d-flex flex-column align-items-center">
 					<img src="../../../images/basic.jpg" class="img-fluid rounded-circle"
-					     style="width:150px; height:150px;"/>
+						style="width:150px; height:150px;" />
 				</div>
 
 				<div class="col-8 p-2">
