--- a/src/main/resources/templates/user/userRecommendForm.mustache
+++ b/src/main/resources/templates/user/userRecommendForm.mustache
@@ -1,6 +1,157 @@
 {{> layout/header}}
 
+<!--17번 개인기업추천보기 화면-->
+<div class="d-flex mb-3">
+    <div class="col-xl-3 col-lg-2 col-md-1 col-sm-auto"></div>
 
+    <div class="h-auto col-xl-6 col-lg-8 col-md-10 col-sm-12 d-flex border border-info">
+        <div class="bg-info col-2">
+            <div class="m-2"></div>
+            <a href="userMyPage" class="w-100 btn btn-info">마이 페이지</a>
+            <div class="m-2"></div>
+            <a href="userResumeForm" class="w-100 btn btn-info">이력서 등록</a>
+            <div class="m-2"></div>
+            <a href="userResumeManage" class="w-100 btn btn-info">이력서 관리</a>
+            <div class="m-2"></div>
+            <a href="userApplyList" class="w-100 btn btn-info">지원 내역</a>
+            <div class="m-2"></div>
+            <a href="userBookMarkForm" class="w-100 btn btn-info">북마크</a>
+            <div class="m-2"></div>
+            <a href="userRecommendForm" class="w-100 btn btn-info">기업 추천</a>
+
+        </div>
+        <div class="col-9 ms-3">
+            <h1 class="text-center mt-2">기업추천</h1>
+
+            <div class="d-flex justify-content-around">
+
+                <div class="border border-info p-2">
+                    <h4>기술</h4>
+
+                    <div>
+                        <div class="form-check d-inline-block ms-2 me-2">
+                            <input class="form-check-input" type="checkbox" id="">
+                            <label class="form-check-label">Java</label>
+                        </div>
+
+                        <div class="form-check d-inline-block ms-2 me-2">
+                            <input class="form-check-input" type="checkbox" id="">
+                            <label class="form-check-label">Spring</label>
+                        </div>
+
+                        <div class="form-check d-inline-block ms-2 me-2">
+                            <input class="form-check-input" type="checkbox" id="">
+                            <label class="form-check-label">DB</label>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div class="form-check d-inline-block ms-2 me-2">
+                            <input class="form-check-input" type="checkbox" id="">
+                            <label class="form-check-label">Python</label>
+                        </div>
+
+                        <div class="form-check d-inline-block ms-2 me-2">
+                            <input class="form-check-input" type="checkbox" id="">
+                            <label class="form-check-label">html</label>
+                        </div>
+
+                        <div class="form-check d-inline-block ms-2 me-2">
+                            <input class="form-check-input" type="checkbox" id="">
+                            <label class="form-check-label">css</label>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div class="form-check d-inline-block ms-2 me-2">
+                            <input class="form-check-input" type="checkbox" id="">
+                            <label class="form-check-label">JavaScript</label>
+                        </div>
+                        <div class="form-check d-inline-block ms-2 me-2">
+                            <input class="form-check-input" type="checkbox" id="">
+                            <label class="form-check-label">C</label>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="border border-info p-2">
+                    <h4>직무</h4>
+
+                    <div>
+                        <div class="form-check d-inline-block ms-2 me-2">
+                            <input class="form-check-input" type="checkbox" id="">
+                            <label class="form-check-label">백엔드</label>
+                        </div>
+
+                        <div class="form-check d-inline-block ms-2 me-2">
+                            <input class="form-check-input" type="checkbox" id="">
+                            <label class="form-check-label">프런트엔드</label>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div class="form-check d-inline-block ms-2 me-2">
+                            <input class="form-check-input" type="checkbox" id="">
+                            <label class="form-check-label">서버</label>
+                        </div>
+
+                        <div class="form-check d-inline-block ms-2 me-2">
+                            <input class="form-check-input" type="checkbox" id="">
+                            <label class="form-check-label">임베디드</label>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+
+            <div class="d-flex border border-info m-3 p-2">
+                <div class="col-9">
+                    <img src="../../../images/kakao_logo.png" alt="Apple(서울/프론트엔드/DB)" class="img-thumbnail"
+                        width="100px" height="60px">
+                </div>
+                <div class="mt-3">
+                    <button type="button" class="btn btn-success">지원하기</button>
+                </div>
+            </div>
+
+            <div class="d-flex border border-info m-3 p-2">
+                <div class="col-9">
+                    <img src="../../../images/kakao_logo.png" alt="Image 2" class="img-thumbnail" width="100px"
+                        height="60px">
+                </div>
+                <div class="mt-3">
+                    <button type="button" class="btn btn-success">지원하기</button>
+                </div>
+            </div>
+
+            <div class="d-flex border border-info m-3 p-2">
+                <div class="col-9">
+                    <img src="../../../images/kakao_logo.png" alt="Image 3" class="img-thumbnail" width="100px"
+                        height="60px">
+                </div>
+                <div class="mt-3">
+                    <button type="button" class="btn btn-success">지원하기</button>
+                </div>
+            </div>
+
+            <div class="d-flex border border-info m-3 p-2">
+                <div class="col-9">
+                    <img src="../../../images/kakao_logo.png" alt="Image 4" class="img-thumbnail" width="100px"
+                        height="60px">
+                </div>
+                <div class="mt-3">
+                    <button type="button" class="btn btn-success">지원하기</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="col-xl-3 col-lg-2 col-md-1 col-sm-auto"></div>
+</div>
 
 
 
