회원가입기능만완료

--- a/src/main/resources/templates/user/userJoinForm.mustache
+++ b/src/main/resources/templates/user/userJoinForm.mustache
@@ -9,7 +9,7 @@
 
     <div class="mt-3"></div>
 
-    <form action="#" method="post" onsubmit="">
+    <form action="/join" method="post" onsubmit="valid()">
       <div class="d-flex form-group mt-2 mb-2">
         <input
           type="email"
@@ -48,7 +48,7 @@
 
       <div class="mb-2">
         <input
-          type="tel"
+          type="name"
           name="name"
           class="form-control"
           placeholder="이름"
