기업쪽 컨트롤러

--- a/src/main/resources/templates/comp/compBookmarkList.mustache
+++ b/src/main/resources/templates/comp/compBookmarkList.mustache
@@ -1,5 +1,5 @@
 {{> layout/header}}
-{{> layout/compHeader}}
+{{> layout/comp2header}}
 
 <!-- 23번 -->
 
@@ -63,5 +63,5 @@
 
 
 
-{{> layout/compFooter}}
+{{> layout/comp2footer}}
 {{> layout/footer}}
