--- a/src/main/resources/templates/comp/compRecommend.mustache
+++ b/src/main/resources/templates/comp/compRecommend.mustache
@@ -1,5 +1,5 @@
 {{> layout/header}}
-{{> layout/compHeader}}
+{{> layout/comp2header}}
 
 <!-- 24번 -->
 
@@ -160,5 +160,5 @@
 
 
 
-{{> layout/compFooter}}
+{{> layout/comp2footer}}
 {{> layout/footer}}
