--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -82,6 +82,18 @@
 						<input class="form-check-input" type="checkbox" id="">
 						<label class="form-check-label">JavaScript</label>
 					</div>
+					<div class="form-check d-inline-block ms-3 me-2">
+						<input class="form-check-input" type="checkbox" id="">
+						<label class="form-check-label">Git</label>
+					</div>
+					<div class="form-check d-inline-block ms-3 me-2">
+						<input class="form-check-input" type="checkbox" id="">
+						<label class="form-check-label">Spring Framework</label>
+					</div>
+					<div class="form-check d-inline-block ms-3 me-2">
+						<input class="form-check-input" type="checkbox" id="">
+						<label class="form-check-label">C</label>
+					</div>
 					
 				</div>
 
@@ -131,6 +143,10 @@
 					<div class="form-check d-inline-block ms-3 me-2">
 						<input class="form-check-input" type="radio" id="" name="radiobutton">
 						<label class="form-check-label">서버</label>
+					</div>
+					<div class="form-check d-inline-block ms-3 me-2">
+						<input class="form-check-input" type="radio" id="" name="radiobutton">
+						<label class="form-check-label">머신러닝</label>
 					</div>
 
 				</div>
