--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -29,6 +29,8 @@
 			<div class="col-4 d-flex justify-content-end">
 				<a class="btn btn-white fw-bold" href="/selectJoinForm">회원가입</a>
 				<a class="btn btn-white fw-bold" href="/loginForm">로그인</a>
+				<a class="btn btn-white fw-bold" href="#">로그아웃</a>
+				<a class="btn btn-white fw-bold" href="/comp/main">내 회사 정보</a>
 			</div>
 		</div>
 
@@ -71,9 +73,9 @@
 						<input
 							class="form-control me-2"
 							type="text"
-							placeholder="Search"
+							placeholder="검색어를 입력하세요."
 						/>
-						<button class="badge bg-secondary" type="button">Search</button>
+						<button class="badge bg-secondary" type="button">검색</button>
 					</form>
 				</div>
 			</div>
