--- a/src/main/resources/templates/comp/compResumeDetail.mustache
+++ b/src/main/resources/templates/comp/compResumeDetail.mustache
@@ -1,5 +1,5 @@
 {{> layout/header}}
-{{> layout/compHeader}}
+{{> layout/comp2header}}
 
 <!-- 25번 -->
 
@@ -56,8 +56,9 @@
 			</div>
 
 
-			<div>
-				<button type="button" class="mb-3 ms-1 w-100 btn btn-success">공고닫기</button>
+			<div class="d-flex justify-content-center">
+				<button type="button" class="mb-3 ms-1 w-100 btn btn-success">연락하기</button>
+				<button type="button" class="mb-3 ms-3 w-100 btn btn-warning">북마크하기</button>
 			</div>
 
 		</div>
@@ -66,5 +67,5 @@
 
 
 		
-{{> layout/compFooter}}
+{{> layout/comp2footer}}
 {{> layout/footer}}
