--- a/src/main/resources/templates/board/questionForm.mustache
+++ b/src/main/resources/templates/board/questionForm.mustache
@@ -59,13 +59,15 @@
         </div>
         <div class="d-flex justify-content-end">
           <div>
-            <button
-              type="submit"
-              class="btn btn-info form-control"
-              style="box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3)"
+            <a href="/help">
+              <button
+                type="button"
+                class="btn btn-info form-control"
+                style="box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3)"
+              >
+                제출하기
+              </button></a
             >
-              제출하기
-            </button>
           </div>
         </div>
       </form>
