--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -77,7 +77,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">고객센터</a>
+                <a class="nav-link text-white" href="/help">고객센터</a>
               </li>
             </ul>
             <form class="d-flex">
