--- a/src/main/resources/templates/user/userResumeForm.mustache
+++ b/src/main/resources/templates/user/userResumeForm.mustache
@@ -7,7 +7,7 @@
 	<div class="h-auto col-xl-6 col-lg-8 col-md-10 col-sm-12 d-flex border border-info">
 		<div class="bg-info col-2">
 			<div class="m-2"></div>
-			<a href="userMyPage" class="w-100 btn btn-info">마이 페이지</a>
+			<a href="updateForm" class="w-100 btn btn-info">마이 페이지</a>
 			<div class="m-2"></div>
 			<a href="userResumeForm" class="w-100 btn btn-info">이력서 등록</a>
 			<div class="m-2"></div>
@@ -31,24 +31,20 @@
 
 				<div class="col-8 p-2">
 					<div class="input-group mb-3">
-					  <span class="input-group-text"
-						><span class="ms-2 me-4">이름</span></span
-					  >
-					  <div type="text" class="form-control"></div>
+						<span class="input-group-text"><span class="ms-2 me-4">이름</span></span>
+						<div type="text" class="form-control"></div>
 					</div>
 					<div class="input-group mb-3">
-					  <span class="input-group-text">전화번호</span>
-					  <div type="text" class="form-control"></div>
+						<span class="input-group-text">전화번호</span>
+						<div type="text" class="form-control"></div>
 					</div>
 					<div class="input-group mb-3">
-					  <span class="input-group-text"
-						><span class="ms-2 me-4">주소</span></span
-					  >
-					  <div type="text" class="form-control"></div>
+						<span class="input-group-text"><span class="ms-2 me-4">주소</span></span>
+						<div type="text" class="form-control"></div>
 					</div>
 					<div class="input-group mb-3">
-					  <span class="input-group-text">생년월일</span>
-					  <div type="text" class="form-control"></div>
+						<span class="input-group-text">생년월일</span>
+						<div type="text" class="form-control"></div>
 					</div>
 				</div>
 
