--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -68,14 +68,14 @@
 			let joinLink = document.querySelector('a[href="/selectJoinForm"]');
 			let loginLink = document.querySelector('a[href="/loginForm"]');
 
-			let sessionUserEmail = "{{#sessionUserEmail}}{{.}}{{/sessionUserEmail}}";
+			let sessionUserEmail = "{{#sessionUser}}{{.}}{{/sessionUser}}";
 
 			if (sessionUserEmail) {
 				joinLink.textContent = "로그아웃";
 				joinLink.href = "/logout";
 
 				loginLink.textContent = "마이페이지";
-				loginLink.href = "/userMyPage";
+				loginLink.href = "/user/updateForm";
 			} else {
 				joinLink.textContent = "회원가입";
 				joinLink.href = "/selectJoinForm";
