--- a/src/main/resources/templates/user/userApplyList.mustache
+++ b/src/main/resources/templates/user/userApplyList.mustache
@@ -34,7 +34,7 @@
 	<div class="class col-8 h-auto d-flex border border-info">
 		<div class="bg-info col-2">
 			<div class="m-2"></div>
-			<a href="userMyPage" class="w-100 btn btn-info">마이 페이지</a>
+			<a href="updateForm" class="w-100 btn btn-info">마이 페이지</a>
 			<div class="m-2"></div>
 			<a href="userResumeForm" class="w-100 btn btn-info">이력서 등록</a>
 			<div class="m-2"></div>
