--- a/src/main/resources/templates/user/userRecommendForm.mustache
+++ b/src/main/resources/templates/user/userRecommendForm.mustache
@@ -7,7 +7,7 @@
     <div class="h-auto col-xl-6 col-lg-8 col-md-10 col-sm-12 d-flex border border-info">
         <div class="bg-info col-2">
             <div class="m-2"></div>
-            <a href="userMyPage" class="w-100 btn btn-info">마이 페이지</a>
+            <a href="updateForm" class="w-100 btn btn-info">마이 페이지</a>
             <div class="m-2"></div>
             <a href="userResumeForm" class="w-100 btn btn-info">이력서 등록</a>
             <div class="m-2"></div>
