--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -34,7 +34,6 @@
         <div class="col-4 d-flex justify-content-end">
           <a class="btn btn-white fw-bold" href="/selectJoinForm">회원가입</a>
           <a class="btn btn-white fw-bold" href="/loginForm">로그인</a>
-          <a class="btn btn-white fw-bold" href="#">로그아웃</a>
           <a class="btn btn-white fw-bold" href="/comp/main">내 회사 정보</a>
         </div>
       </div>
@@ -106,7 +105,7 @@
           joinLink.href = "/logout";
 
           loginLink.textContent = "마이페이지";
-          loginLink.href = "/userMyPage";
+          loginLink.href = "/user/updateForm";
         } else {
           joinLink.textContent = "회원가입";
           joinLink.href = "/selectJoinForm";
