컨트롤러 컨벤션

--- a/src/main/resources/templates/user/postingDetail.mustache
+++ b/src/main/resources/templates/user/postingDetail.mustache
@@ -1,7 +1,7 @@
 {{> layout/header}}
 
 <!--10번 개인공고상세보기 화면-->
-<!-- userPostingDetail.mustache -->
+<!-- postingDetail.mustache -->
 <div class="d-flex mt-2 mb-4">
 	<div class="col-xl-3 col-lg-2 col-md-1"></div>
 
