--- a/src/main/resources/templates/user/selectJoinForm.mustache
+++ b/src/main/resources/templates/user/selectJoinForm.mustache
@@ -28,10 +28,10 @@
 
 <script>
   function userJoinForm() {
-    location.href = "/userJoinForm";
+    location.href = "/user/joinForm";
   }
   function compJoinForm() {
-    location.href = "/compJoinForm";
+    location.href = "/comp/joinForm";
   }
 </script>
 {{> layout/footer}}
