--- a/src/main/resources/templates/user/loginForm.mustache
+++ b/src/main/resources/templates/user/loginForm.mustache
@@ -8,7 +8,7 @@
 			<h3 class="text-center mb-3">로그인</h3>
 			<div class="d-flex">
 				<a href="" class="mx-auto text-decoration-none text-black">로그인</a>
-				<a href="selectJoinForm" class="mx-auto text-decoration-none text-black">회원가입</a>
+				<a href="/selectJoinForm" class="mx-auto text-decoration-none text-black">회원가입</a>
 			</div>
 		</div>
 
@@ -37,37 +37,5 @@
 		</form>
 	</div>
 </div>
-
-
-<script>
-	let sessionUser = "{{#sessionUser}}{{.}}{{/sessionUser}}"; // 세션에 저장된 사용자의 이메일 정보
-
-	function changeLoginLinks() {
-		let joinLink = document.querySelector('a[href="/selectJoinForm"]');
-		let loginLink = document.querySelector('a[href="/loginForm"]');
-
-		if (sessionUserEmail) {
-			joinLink.textContent = "로그아웃";
-			joinLink.href = "/logout";
-
-			loginLink.textContent = "마이페이지";
-			loginLink.href = "/updateForm";
-		} else {
-			joinLink.textContent = "회원가입";
-			joinLink.href = "/selectJoinForm";
-
-			loginLink.textContent = "로그인";
-			loginLink.href = "/loginForm";
-		}
-	}
-
-	document.addEventListener("DOMContentLoaded", function () {
-		let loginButton = document.querySelector("#button");
-		loginButton.addEventListener("click", changeLoginLinks);
-
-		changeLoginLinks(); // 페이지 로드 시 초기 세션 상태에 따라 링크 텍스트 변경
-	});
-
-</script>
 
 {{> layout/footer}}
