--- a/src/main/resources/templates/user/resumeManage.mustache
+++ b/src/main/resources/templates/user/resumeManage.mustache
@@ -12,15 +12,15 @@
 			<div class="m-2"></div>
 			<a href="updateForm" class="w-100 btn btn-info">마이 페이지</a>
 			<div class="m-2"></div>
-			<a href="userResumeForm" class="w-100 btn btn-info">이력서 등록</a>
+			<a href="resumeForm" class="w-100 btn btn-info">이력서 등록</a>
 			<div class="m-2"></div>
-			<a href="userResumeManage" class="w-100 btn btn-info">이력서 관리</a>
+			<a href="resumeManage" class="w-100 btn btn-info">이력서 관리</a>
 			<div class="m-2"></div>
-			<a href="userApplyList" class="w-100 btn btn-info">지원내역</a>
+			<a href="applyList" class="w-100 btn btn-info">지원내역</a>
 			<div class="m-2"></div>
-			<a href="userBookMarkForm" class="w-100 btn btn-info">북마크</a>
+			<a href="bookMarkForm" class="w-100 btn btn-info">북마크</a>
 			<div class="m-2"></div>
-			<a href="userRecommendForm" class="w-100 btn btn-info">기업추천</a>
+			<a href="recommendForm" class="w-100 btn btn-info">기업추천</a>
 			<div class="m-2"></div>
 		</div>
 
