마이페이지_머스테치 틀 통일

--- a/src/main/resources/templates/user/bookMarkForm.mustache
+++ b/src/main/resources/templates/user/bookMarkForm.mustache
@@ -2,11 +2,11 @@
 
 <!-- 16번 개인북마크 화면 -->
 
-<div class="d-flex">
-  <div class="col-2"></div>
+<div class="d-flex mb-3">
+   <div class="col-2"></div>
 
-  <div class="class col-8 h-auto d-flex border border-info">
-    <div class="bg-info col-2">
+   <div class="class col-8 h-auto d-flex border border-info">
+      <div class="bg-info col-2">
       <div class="m-2"></div>
       <a href="updateForm" class="w-100 btn btn-info">마이 페이지</a>
       <div class="m-2"></div>
