--- a/src/main/resources/templates/user/recommendForm.mustache
+++ b/src/main/resources/templates/user/recommendForm.mustache
@@ -2,10 +2,10 @@
 
 <!--17번 개인기업추천보기 화면-->
 <div class="d-flex mb-3">
-    <div class="col-xl-3 col-lg-2 col-md-1 col-sm-auto"></div>
+   <div class="col-2"></div>
 
-    <div class="h-auto col-xl-6 col-lg-8 col-md-10 col-sm-12 d-flex border border-info">
-        <div class="bg-info col-2">
+   <div class="class col-8 h-auto d-flex border border-info">
+      <div class="bg-info col-2">
             <div class="m-2"></div>
             <a href="updateForm" class="w-100 btn btn-info">마이 페이지</a>
             <div class="m-2"></div>
