--- a/src/main/resources/templates/user/resumeManage.mustache
+++ b/src/main/resources/templates/user/resumeManage.mustache
@@ -3,9 +3,10 @@
 <!-- 14번 이력서관리 화면-->
 
 
-<div class="d-flex">
+<div class="d-flex mb-3">
 
 	<div class="col-2"></div>
+
 
 	<div class="class col-8 h-auto d-flex border border-info">
 		<div class="bg-info col-2">
