--- a/src/main/resources/templates/user/resumeForm.mustache
+++ b/src/main/resources/templates/user/resumeForm.mustache
@@ -2,9 +2,9 @@
 
 
 <div class="d-flex mb-3">
-   <div class="col-xl-3 col-lg-2 col-md-1 col-sm-auto"></div>
+   <div class="col-2"></div>
 
-   <div class="h-auto col-xl-6 col-lg-8 col-md-10 col-sm-12 d-flex border border-info">
+   <div class="class col-8 h-auto d-flex border border-info">
       <div class="bg-info col-2">
          <div class="m-2"></div>
          <a href="updateForm" class="w-100 btn btn-info">마이 페이지</a>
@@ -22,8 +22,7 @@
       </div>
       <div class="col-9 ms-3">
          <h1 class="text-center mt-2">이력서 등록</h1>
-		<!-- th:object="${resumeDTO}"는 템플릿에서 폼 데이터를 관리하기 위해 사용되며, @ModelAttribute("resumeDTO")에서 전달한 모델 객체를 참조-->
-         <form action="/user/resumeSave" method="post" >
+         <form action="/user/resumeSave" method="post">
             <div class="d-flex">
                <div class="m-2 col-4 d-flex flex-column align-items-center">
                   <img src="../../../images/basic.jpg" class="img-fluid rounded-circle"
